fix font size on mobile

--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -12,7 +12,7 @@
 		-webkit-text-fill-color: #141414;
 
 		@media screen and (max-width: 767px) {
-			font-size: calc(28px + 106*(100vw - 320px)/1600);
+			font-size: calc(32px + 106*(100vw - 320px)/1600);
 			-webkit-text-stroke-color: initial;
 			-webkit-text-fill-color: initial;
 			margin-bottom: 50px;
